Bug 324703 - lokalize crash when using 'search and replace in files F6'
Summary: lokalize crash when using 'search and replace in files F6'
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-09-09 16:11 UTC by zless
Modified: 2013-11-14 13:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zless 2013-09-09 16:11:39 UTC
Application: lokalize (1.5)
KDE Platform Version: 4.11.00
Qt Version: 4.8.5
Operating System: Linux 3.11.0-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:

Access menu item Tools > Search and replace in files, type something in the source field, press Enter and wait a bit.

I did this with the KDE translations files project open.

The crash can be reproduced every time.

-- Backtrace:
Application: Lokalize (lokalize), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fac0830d780 (LWP 9254))]

Thread 5 (Thread 0x7fabf3d20700 (LWP 9255)):
#0  0x00007fac01e3503f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fac049eece8 in wait (time=18446744073709551615, this=0x2bda480) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2bda128, mutex=mutex@entry=0x2bda120, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007fac05592bc6 in QFileInfoGatherer::run (this=0x2bda110) at dialogs/qfileinfogatherer.cpp:214
#4  0x00007fac049ee83c in QThreadPrivate::start (arg=0x2bda110) at thread/qthread_unix.cpp:338
#5  0x00007fac01e310a2 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007fac040a4a2d in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7fabf351f700 (LWP 9256)):
#0  0x00007fac0409bf5d in poll () from /usr/lib/libc.so.6
#1  0x00007fac00163084 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fac0016318c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fac04b2a756 in QEventDispatcherGlib::processEvents (this=0x7fabe40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#4  0x00007fac04af8f7f in QEventLoop::processEvents (this=this@entry=0x7fabf351ee20, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fac04af9215 in QEventLoop::exec (this=this@entry=0x7fabf351ee20, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fac049ec396 in QThread::exec (this=this@entry=0x2bdef90) at thread/qthread.cpp:536
#7  0x00007fac04ad90a8 in QInotifyFileSystemWatcherEngine::run (this=0x2bdef90) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007fac049ee83c in QThreadPrivate::start (arg=0x2bdef90) at thread/qthread_unix.cpp:338
#9  0x00007fac01e310a2 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007fac040a4a2d in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fabf2d1e700 (LWP 9257)):
#0  0x00007fac04044820 in memset () from /usr/lib/libc.so.6
#1  0x00007fac04a20620 in QRegExpMatchState::prepareForMatch (this=this@entry=0x7fabe826db30, eng=0x7fabe8210540) at tools/qregexp.cpp:1388
#2  0x00007fac04a2eda1 in prepareEngineForMatch (priv=0x7fabe826db00, str=...) at tools/qregexp.cpp:3731
#3  0x00007fac04a2eeed in QRegExp::indexIn (this=this@entry=0x7fabf2d1d6b0, str=..., offset=offset@entry=0, caretMode=caretMode@entry=QRegExp::CaretAtZero) at tools/qregexp.cpp:4124
#4  0x00007fac04a386ab in QString::indexOf (this=0x7fabe84325f0, rx=..., from=from@entry=0) at tools/qstring.cpp:3092
#5  0x00000000004d251b in QString::contains (this=<optimized out>, rx=...) at /usr/include/qt4/QtCore/qstring.h:204
#6  0x00000000004d156e in updateHeader (header=..., comment=..., langCode=..., numberOfPluralForms=@0x7fabe828c6e8: 3, CatalogProjectId=..., generatedFromDocbook=<optimized out>, belongsToProject=false, forSaving=forSaving@entry=true, codec=0x14500a0) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/gettextheader.cpp:592
#7  0x00000000004d5399 in GettextCatalog::GettextStorage::setHeader (this=this@entry=0x7fabe828c6c0, newHeader=...) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/gettext/gettextstorage.cpp:412
#8  0x00000000004d72fa in GettextCatalog::CatalogImportPlugin::commitTransaction (this=this@entry=0x7fabf2d1da80) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/gettext/importplugin.cpp:142
#9  0x00000000004d7363 in GettextCatalog::CatalogImportPlugin::open (this=this@entry=0x7fabf2d1da80, device=0x7fabe8204770, catalog=catalog@entry=0x7fabe828c6c0, line=line@entry=0x7fabf2d1da5c) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/gettext/importplugin.cpp:109
#10 0x00000000004d4d4c in GettextCatalog::GettextStorage::load (this=0x7fabe828c6c0, device=<optimized out>) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/gettext/gettextstorage.cpp:63
#11 0x00000000004ca86c in Catalog::loadFromUrl (this=this@entry=0x7fabf2d1dd00, url=..., saidUrl=..., fileSize=fileSize@entry=0x34bc6d0) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/catalog/catalog.cpp:555
#12 0x000000000049bb51 in SearchJob::run (this=0x34bc670) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/filesearch/filesearchtab.cpp:214
#13 0x00007fac06a38e56 in ThreadWeaver::JobRunHelper::runTheJob (this=this@entry=0x7fabf2d1de20, th=th@entry=0x29b2850, job=job@entry=0x34bc670) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/Job.cpp:106
#14 0x00007fac06a39021 in ThreadWeaver::Job::execute (this=0x34bc670, th=0x29b2850) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/Job.cpp:135
#15 0x00007fac06a38646 in ThreadWeaver::Thread::run (this=0x29b2850) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/Thread.cpp:108
#16 0x00007fac049ee83c in QThreadPrivate::start (arg=0x29b2850) at thread/qthread_unix.cpp:338
#17 0x00007fac01e310a2 in start_thread () from /usr/lib/libpthread.so.0
#18 0x00007fac040a4a2d in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fabf0edd700 (LWP 9258)):
#0  0x00007fac01e3503f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fac049eece8 in wait (time=18446744073709551615, this=0x1566e20) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x1566cf8, mutex=0x1566fa0, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007fac06a36966 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1566cd0, th=0x2cd24e0) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007fac06a39d93 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1654de0, th=0x2cd24e0, previous=0x2dbb550) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007fac06a38603 in ThreadWeaver::Thread::run (this=0x2cd24e0) at /build/kdelibs/src/kdelibs-4.11.0/threadweaver/Weaver/Thread.cpp:98
#6  0x00007fac049ee83c in QThreadPrivate::start (arg=0x2cd24e0) at thread/qthread_unix.cpp:338
#7  0x00007fac01e310a2 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007fac040a4a2d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fac0830d780 (LWP 9254)):
[KCrash Handler]
#6  0x00007fac03ff53d9 in raise () from /usr/lib/libc.so.6
#7  0x00007fac03ff67d8 in abort () from /usr/lib/libc.so.6
#8  0x00007fac049e40cf in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=<optimized out>) at global/qglobal.cpp:2323
#9  0x00007fac049e4259 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=msg@entry=0x7fac04b62f70 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff1f2747a8) at global/qglobal.cpp:2369
#10 0x00007fac049e4a64 in qFatal (msg=msg@entry=0x7fac04b62f70 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2552
#11 0x00007fac049e4aa6 in qt_assert (assertion=assertion@entry=0x7fac04bdec65 "last >= first", file=file@entry=0x7fac04bdec0a "kernel/qabstractitemmodel.cpp", line=line@entry=2413) at global/qglobal.cpp:2018
#12 0x00007fac04af0bdc in QAbstractItemModel::beginInsertRows (this=this@entry=0x33261d0, parent=..., first=first@entry=21, last=last@entry=20) at kernel/qabstractitemmodel.cpp:2413
#13 0x000000000049a477 in FileSearchModel::appendSearchResults (this=0x33261d0, results=...) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/filesearch/filesearchtab.cpp:357
#14 0x000000000049a55a in FileSearchTab::searchJobDone (this=0x2ce73b0, job=0x34b28a0) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/filesearch/filesearchtab.cpp:792
#15 0x00007fac04b102c8 in QMetaObject::activate (sender=0x34b28a0, m=m@entry=0x7fac06c463a0 <ThreadWeaver::Job::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff1f274aa0) at kernel/qobject.cpp:3547
#16 0x00007fac06a38a62 in ThreadWeaver::Job::done (this=<optimized out>, _t1=0x34b28a0) at /build/kdelibs/src/build/threadweaver/Weaver/Job.moc:110
#17 0x00007fac04b14dae in QObject::event (this=0x34b28a0, e=<optimized out>) at kernel/qobject.cpp:1194
#18 0x00007fac050514c1 in QApplicationPrivate::notify_helper (this=this@entry=0x1491620, receiver=receiver@entry=0x34b28a0, e=e@entry=0x7fabe8166820) at kernel/qapplication.cpp:4562
#19 0x00007fac0505838d in QApplication::notify (this=this@entry=0x7fff1f2751e0, receiver=receiver@entry=0x34b28a0, e=e@entry=0x7fabe8166820) at kernel/qapplication.cpp:4348
#20 0x00007fac06e7a886 in KApplication::notify (this=0x7fff1f2751e0, receiver=0x34b28a0, event=0x7fabe8166820) at /build/kdelibs/src/kdelibs-4.11.0/kdeui/kernel/kapplication.cpp:311
#21 0x00007fac04afab5d in QCoreApplication::notifyInternal (this=0x7fff1f2751e0, receiver=receiver@entry=0x34b28a0, event=event@entry=0x7fabe8166820) at kernel/qcoreapplication.cpp:949
#22 0x00007fac04afe041 in sendEvent (event=0x7fabe8166820, receiver=0x34b28a0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x143a670) at kernel/qcoreapplication.cpp:1573
#24 0x00007fac04afe453 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#25 0x00007fac04b2af83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#26 postEventSourceDispatch (s=0x14920e0) at kernel/qeventdispatcher_glib.cpp:280
#27 0x00007fac00162d96 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0x00007fac001630e8 in ?? () from /usr/lib/libglib-2.0.so.0
#29 0x00007fac0016318c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0x00007fac04b2a735 in QEventDispatcherGlib::processEvents (this=0x148d910, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#31 0x00007fac050fb4e6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007fac04af8f7f in QEventLoop::processEvents (this=this@entry=0x7fff1f2750e0, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007fac04af9215 in QEventLoop::exec (this=this@entry=0x7fff1f2750e0, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007fac04aff0e9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#35 0x00007fac0504fa4c in QApplication::exec () at kernel/qapplication.cpp:3823
#36 0x00000000004379dd in main (argc=<optimized out>, argv=<optimized out>) at /build/kdesdk-lokalize/src/lokalize-4.11.0/src/main.cpp:126

Reported using DrKonqi
Comment 1 Chao Feng 2013-11-14 13:12:28 UTC
Git commit 777afa075b8be79e51766aa48d68d0b45712c778 by Feng Chao.
Committed on 10/11/2013 at 03:04.
Pushed by fengchao into branch 'master'.

Check search result size before insert it.

M  +4    -3    src/filesearch/filesearchtab.cpp

http://commits.kde.org/lokalize/777afa075b8be79e51766aa48d68d0b45712c778