Check search result size before insert it.

BUG: 324703